[project]
name = "inventory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "markdown>=3.7",
    "pillow>=11.0.0",
    "ppf-datamatrix>=0.2",
    "python-dotenv>=1.0.1",
    "uuid>=1.30",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]
